@@ -74,6 +74,7 @@
    - ofaHub: initialize from ofa_hub_new() (todo #1273).
    - ofaHub: manage both dossier and user settings.
    - ofaIDBMeta interface is renamed to ofaIDBDossierMeta (todo #1274).
+   - ofaIDBModel: update get a #ofaIGetter instead of a ofaHub (todo #1288).
    - ofaIDBPeriod interface is renamed to ofaIDBExerciceMeta (todo #1275).
    - ofaMiscAuditStore: new class.
    - ofaMiscAuditTreeview: new class.
